Add administration to management dashboard step 1
